--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@tanstack/react-query": "^5.84.2",
+    "@types/qrcode": "^1.5.5",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.1.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
