--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "date-fns": "^4.1.0",
     "firebase": "^12.1.0",
     "lucide-react": "^0.539.0",
-    "next": "15.4.6",
+    "next": "^16.1.1",
     "qrcode": "^1.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "zod": "^4.0.17"
